[package]
name = "burberry"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "6f4e397", features = [
    "contract",
    "network",
    "providers",
    "provider-ipc",
    "provider-ws",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types-eth",
    "signers",
    "signer-wallet",
] }
async-stream = "0.3.5"
async-trait = "0.1.51"
eyre = "0.6.12"
futures = "0.3.17"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.68"
tokio = "1.37.0"
tracing = { version = "0.1.37", features = ["log"] }
thiserror = "1.0.59"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
