[package]
name = "burberry"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
alloy = { version = "0.1", features = [ "full" ] }
async-stream = "0.3"
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = "1"
tracing = { version = "0.1.37", features = ["log"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
